classDiagram

    class PipelineHandler~T~ {
        <<interface>>
        +handle(T context) PipelineResult
    }

    class PipelineResult {
        -boolean passed
        -String failedAt
        -String errorMessage
        -Section conflictingSection
        +passed() PipelineResult$
        +failed(String failedAt, String message) PipelineResult$
        +failedWithConflict(String failedAt, Section conflict) PipelineResult$
        +isPassed() boolean
        +getFailedAt() String
        +getErrorMessage() String
        +getConflictingSection() Section
    }

    class RegistrationContext {
        -ObservableStudent student
        -Section section
        -PermissionTree permissionTree
        -Enrollment enrollment
        -AuthenticationResult authenticationResult
        +getStudent() ObservableStudent
        +getSection() Section
        +getPermissionTree() PermissionTree
        +getEnrollment() Enrollment
        +getAuthenticationResult() AuthenticationResult
    }

    class RegistrationPipeline {
        -List~PipelineHandler~RegistrationContext~~ handlers
        +standard() RegistrationPipeline
        +run(RegistrationContext ctx) PipelineResult
    }

    class AuthCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class PermissionCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class RegistrationPeriodHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class FinancialHoldCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class AcademicHoldCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class PrerequisiteCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class CorequisiteCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class CapacityCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class CreditLimitCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class DuplicateEnrollmentCheckHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class ScheduleConflictHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class EnrollmentHandler {
        +handle(RegistrationContext ctx) PipelineResult
    }

    class RegisterCommand {
        -ObservableStudent student
        -Section section
        -PermissionTree permissionTree
        -RegistrationPipeline pipeline
        +execute()
        +undo()
    }


    PipelineHandler~T~ <|.. AuthCheckHandler : implements
    PipelineHandler~T~ <|.. PermissionCheckHandler : implements
    PipelineHandler~T~ <|.. RegistrationPeriodHandler : implements
    PipelineHandler~T~ <|.. FinancialHoldCheckHandler : implements
    PipelineHandler~T~ <|.. AcademicHoldCheckHandler : implements
    PipelineHandler~T~ <|.. PrerequisiteCheckHandler : implements
    PipelineHandler~T~ <|.. CorequisiteCheckHandler : implements
    PipelineHandler~T~ <|.. CapacityCheckHandler : implements
    PipelineHandler~T~ <|.. CreditLimitCheckHandler : implements
    PipelineHandler~T~ <|.. DuplicateEnrollmentCheckHandler : implements
    PipelineHandler~T~ <|.. ScheduleConflictHandler : implements
    PipelineHandler~T~ <|.. EnrollmentHandler : implements

    RegistrationPipeline o-- PipelineHandler~T~
    RegisterCommand --> RegistrationPipeline
    RegisterCommand ..> RegistrationContext : creates
    RegistrationPipeline ..> PipelineResult : returns
    RegistrationPipeline *-- RegistrationContext : has a